[package]
name = "aaaaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.16.1" }
tungstenite = "0.16.0"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
